syntax = "proto3";

package echo;

option go_package = ".;proto";

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service Echo {
    rpc UnaryEcho(EchoRequest) returns (EchoResponse) {};
    rpc ServerStreamingEhco(EchoRequest) returns (stream EchoResponse) {};
    rpc ClientStreamingEhco(stream EchoRequest) returns (EchoResponse) {};
    rpc BidirectionalStreamingecho (stream EchoRequest) returns (stream EchoResponse) {};
}